<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <!-- "Mark Favorite", should appear as action button if possible -->
        <item
            android:id="@+id/action_done"
            android:icon="@drawable/ic_done_24dp"
            android:title="@string/action_done"
            app:showAsAction="always"/>
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_camera_24dp"
        android:title="@string/action_camera"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_sticker"
        android:icon="@drawable/ic_tag_faces_24dp"
        android:title="@string/action_sticker"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_barcode"
        android:icon="@drawable/ic_poll_24dp"
        android:title="@string/action_barcode"
        app:showAsAction="always"/>

        <!-- Settings, should always be in the overflow -->
        <item android:id="@+id/action_settings"
            android:title="@string/action_setting"
            app:showAsAction="never"/>

</menu>